Add run.sh for local smoke testing
Wraps the build + the --add-opens flag Spring Boot 1.4.1's CGLIB
config-class proxying needs on modern JDKs, so launching the app
locally doesn't require remembering either step.